--- a/index.html
+++ b/index.html
@@ -21,15 +21,27 @@
 
 <body>
 
-  <section class="parent">
-    <div class="child">
+  <h2>Tic Tac Toe</h2>
 
-      <h2>Tic Tac Toe</h2>
+  <div id="notice"></div>
 
-      <div id="game-board"></div>
+  <div class="board">
 
-    </div>
-  </section>
+    <div class="cell" data-bit="1"></div>
+    <div class="cell" data-bit="2"></div>
+    <div class="cell" data-bit="4"></div>
+
+    <div class="cell" data-bit="8"></div>
+    <div class="cell" data-bit="16"></div>
+    <div class="cell" data-bit="32"></div>
+
+    <div class="cell" data-bit="64"></div>
+    <div class="cell" data-bit="128"></div>
+    <div class="cell" data-bit="256"></div>
+
+  </div>
+
+  <button id="new-game">Start New Game</button>
 
   <script src="js/app.js"></script>
 </body>
