--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
 
   <button id="new-game">Start New Game</button>
 
+  <a href="#openModal" id="instructions" >?</a>
+
+  <div id="openModal" class="modalDialog">
+    <div>
+
+      <a href="#close" title="Close" class="close">X</a>
+
+      <h2>Tic Tac Toe</h2>
+
+      <p>The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game.</p>
+
+      <p>Start by placing your piece anywhere on the game board. Your opponent will be the machine and it will take it's turn after you. Good luck!</p>
+
+      <p>Made by <a href="https://twitter.com/jamigibbs" target="_blank">Jami Gibbs</a>. View on <a href="https://github.com/jamigibbs/tic-tac-toe" target="_blank">Github</a></p>
+
+    </div>
+  </div>
+
   <div id="notice"></div>
 
   <div class="board">
